[package]
name = "rpaths"
version = "0.1.3"
authors = ["Edward George <edwardgeorge@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.4"
env_logger = "0.11.3"
expanduser = "1.2.2"
log = "0.4.21"
