[package]
name = "rpaths"
version = "0.1.3"
authors = ["Edward George <edwardgeorge@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.13", features = ["cargo"] }
env_logger = "0.11.5"
expanduser = "1.2.2"
log = "0.4.22"
